# KDEngine-C

./: .gitignore  CMakeLists.txt
assets/shaders/: fragment.glsl  vertex.glsl
inc/: engine.h  global.h  sdl.h
inc/ecs/: ecs.h  ecs_global.h
inc/input/: input.h  keycodes.h
inc/render/: render.h  render_internal.h
inc/utils/: file.h  hash_table.h  list.h  logging.h  types.h
src/: global.c  main.c
src/ecs/: ecs.c  ecs_global.c
src/input/: input.c
src/render/: render.c  render_internal.c
src/utils/: file.c  hash_table.c  list.c  logging.c
ven/inc/glad/: glad.h
ven/src/glad/: glad.c
